--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "shelljs": "^0.8.4",
     "unzip": "^0.1.11",
     "xmldom": "^0.6.0",
-    "xpath": "0.0.32"
+    "xpath": "0.0.32",
+    "xpath2": "0.0.1-alpha-2"
   },
   "devDependencies": {
     "gulp": "^4.0.2"
