--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fs-extra": "^10.0.0",
     "multer": "^1.3.0",
     "shelljs": "^0.8.4",
+    "underscore": "^1.13.1",
     "unzip": "^0.1.11",
     "xmldom": "^0.6.0",
     "xpath": "0.0.32",
